--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
             <div class="div-container tools">
                 <button data-toggle="modal" data-target="#new-gift-model" type="button" class="btn btn-success">新增</button>
                 <button onclick="start_action_handler()" id="start-action" type="button" class="btn btn-success">运行</button>
+                <button onclick="show_page_handler()" id="start-action" type="button" class="btn btn-success">展示页面</button>
                 <!-- <button type="button" class="btn btn-warning">停止</button> -->
             </div>
             <div class="div-container">
