--- a/public/liveicon.html
+++ b/public/liveicon.html
@@ -23,7 +23,7 @@
                 <span>0/200</span>
                 <span>下雨</span>
             </div>
-            <div class="gift-item">
+            <div class="gift-item heartbeat">
                 <span>神之记事本</span>
                 <span>0/200</span>
                 <span>下雨</span>
